...
    private func presentToNoRegisteredEmailErrorAlertController() -> FlowContributors {
        let alertController = CustomDimAlertController(title: nil,
            message: LocalizationManager.shared.localizedString(forKey: "이메일 없음"),
            preferredStyle: .alert)
        let okAction = UIAlertAction(title: LocalizationManager.shared.localizedString(forKey: "확인"), style: .default, handler: nil)
        alertController.addAction(okAction)
        alertController.view.accessibilityIdentifier = "NoRegisteredEmailErrorAlertController"
        okAction.accessibilityIdentifier = "NoRegisteredEmailErrorAlertControllerOKButton"
        self.rootViewController.present(alertController, animated: true, completion: nil)
        
        return .none
    }
    
    //MARK: 뒤로가기 메소드
...
