...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.setNavigationBar(title: LocalizationManager.shared.localizedString(forKey: "로그인"), leftItem: backButton, rightItem: nil)
        self.hideKeyboard(disposeBag: disposeBag)
        self.bindKeyboardToButton(to: signinEmailEntryView.nextButton, disposeBag: disposeBag)
        backButton.accessibilityIdentifier = "signin_backButton"
    }
}

extension SigninEmailEntryViewController {
    func bind(reactor: SigninEmailEntryReactor) {
        bindAction(reactor: reactor)
...
