...
        button.layer.cornerRadius = 12*Constants.standardHeight
        var config = UIButton.Configuration.plain()
        config.imagePadding = 4*Constants.standardWidth
        button.configuration = config
        return button
    }()
    let coinMonLoginButton: UIButton = {
        let button = UIButton()
        button.setTitleColor(.black, for: .normal)
        button.titleLabel?.font = FontManager.H6_16
        button.layer.cornerRadius = 12*Constants.standardHeight
        button.layer.borderWidth = 1
        button.layer.borderColor = ColorManager.color_neutral_90?.cgColor
...
